# sect

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  requirements.txt
sect/: __init__.py  decomposition.py  hints.py  triangulation.py
sect/core/: contracts.py  delaunay.py  edge.py  event.py  events_queue.py  hints.py  leaf.py  location.py  node.py  quad_edge.py  raw.py  subdivisional.py  sweep.py  sweep_line.py  trapezoid.py  trapezoidal.py  trapezoidal_map.py  utils.py  x_node.py  y_node.py
sect/core/delaunay/: abcs.py  contracts.py  event.py  events_queue.py  hints.py  quad_edge.py  sweep_line.py  triangulation.py  utils.py
sect/core/trapezoidal/: abcs.py  bounding.py  edge.py  graph.py  hints.py  leaf.py  node.py  trapezoid.py  utils.py  x_node.py  y_node.py
sect/core/voronoi/: __init__.py  abcs.py  beach_line_key.py  big_float.py  (+13 more)
tests/: conftest.py  utils.py
tests/decomposition_tests/: strategies.py  test_multipoint_voronoi.py  test_multisegment_trapezoidal.py  test_multisegment_voronoi.py  test_polygon_trapezoidal.py  test_trapezoidal.py  test_trapezoidal_polygon.py
tests/strategies/: __init__.py  base.py
tests/triangulation_tests/: strategies.py  test_constrained_delaunay.py  test_constrained_delaunay_triangles.py  test_delaunay.py  test_delaunay_triangles.py  test_to_triangulation_cls.py
(+14 files in other folders)
